[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sp_calculator"
authors = [{name = "Seb", email = "sebastianpikand@gmail.com"}]
readme = "readme.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/sebastianpikand/sp_calculator"
